--- a/package.json
+++ b/package.json
@@ -4,22 +4,33 @@
   "private": true,
   "main": "dist/index.js",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-daterangepicker": "^3.1.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "date-fns": "^2.16.1",
     "history": "4.10.1",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-chartist": "0.14.3",
+    "react-date-range": "^1.1.3",
+    "react-datepicker": "^3.4.1",
+    "react-daterange-picker": "^2.0.1",
     "react-dom": "17.0.1",
     "react-google-maps": "9.4.5",
     "react-icons": "^4.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
+    "rsuite": "^4.8.8",
     "styled-components": "^5.2.1"
   },
   "scripts": {
